fixed issue where box shadow wasn't showing up on mobile iOS

--- a/sass/components/_smooch.sass
+++ b/sass/components/_smooch.sass
@@ -45,19 +45,20 @@ $gradient-gray: rgba(184, 187, 189, .4)
 	height: 40px
 	color: #828587
 	margin-left: 6%
+	-webkit-appearance: none
 	background-color: transparent
 	border-top: none
 	border-left: 4px solid $green
 	border-right: none
 	border-bottom: none
-	box-shadow: none
+	box-shadow: inset 0 0 10px 3px rgba(184, 187, 189, .3)
 	border-radius: 0
 	transition: $transition
 	font-family: $latoFont
 	font-size: 28px
 	padding-left: 15px
 	opacity: 1
-	animation: input-flicker 2s cubic-bezier(0.4, 0, 0.2, 1) 2s infinite
+	animation: input-flicker 2.5s cubic-bezier(0.4, 0, 0.2, 1) 2s infinite
 	@keyframes input-flicker
 		0%
 			opacity: 1
@@ -70,4 +71,5 @@ $gradient-gray: rgba(184, 187, 189, .4)
 		border-left: 6px solid $green
 		transition: $transition
 		animation: none
+		box-shadow: inset 0 0 10px 3px rgba(184, 187, 189, .08)
 @import "smooch-chat"
